# MyNeuralNetworks

./: CMakeLists.txt  Cmake(everything in 1).txt  CmakeList.txt  Новый текстовый документ.txt
libs/: CMakeLists.txt
libs/MyNN/: CMakeLists.txt  CmakeList.txt
libs/MyNN/include/: MyNNActivations.h  MyNNActivations.hpp  MyNNLayers.h  MyNNLayers.hpp  MyNNLosses.hpp  MyNNModel.hpp  MyNNNeurons.hpp
libs/lib1/include/: MyNNLibrary.h  MyNNLosses.h  MyNNModel.h  MyNNNeurons.h
libs/lib1/src/: activations.cpp  layers.cpp  losses.cpp  model.cpp  neurons.cpp
src/: main.cpp
tests/: CMakeLists.txt  TestActivations.cpp  TestModel.cpp  TestNeurons.cpp
